[package]
name = "REST"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["rt-multi-thread","macros"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20" , features = ["fmt" , "env-filter"]}
serde = {version = "1.0.145" , features = ["derive"]}
serde_json = "1.0.145"
